--- a/src/gallery.html
+++ b/src/gallery.html
@@ -3,8 +3,8 @@
 	<head>
     <meta charset="UTF-8"/>
     <title>AUTO KOMPLEX Warsztat Samochodowy</title>
-    <meta name="description" content="Potężne powierzchnie magazynowe oraz w pełni zautomatyzowana logistyka na terenie Polski i Europy z wykorzystaniem współpracujących firm kurierskich.">
-    <meta name="keywords" content="">
+    <meta name="description" content="Warsztat samochodowy we Wrocławiu (Ołtaszyn/Krzyki). Blacharstwo, lakiernictwo i mechanika pojazdowa. Likwidacja szkód komunikacyjnych OC i AC. Auto holowanie.">
+    <meta name="keywords" content="watsztat samochodowy, blacharstwo, lakiernictwo, mechanika, ołtaszyn, wrocław, holowanie, likwidacja szkody, oc i ac, wymiana oleju, rozrząd, cheack engine, naprawa pojazdów, mechanik">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <link rel="icon" type="images/png" href="images/icon.png">
@@ -15,7 +15,7 @@
   <body>
     <header class="header_area whiteMenu" id="navbar">
       <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="3lp logo"></a>
+        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="auto komplex logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="icon-bar"></span>
@@ -76,57 +76,63 @@
         </div>
       </div>
     </section>
-    <div class="container">
-      <div class="row">
+    <section class="galleryArea">
+      <div class="container">
         <div class="row">
+          <div class="col-6 topText">
+            <p>PRZED NAPRAWĄ</p>
+          </div>
+          <div class="col-6 topText">
+            <p>PO NAPRAWIE</p>
+          </div>
           <div class="col-6 thumb">
-            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/why.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/why.jpg"alt="Another alt text">
+            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/1.jpg" data-target="#image-gallery">
+              <img class="img-thumbnail" src="images/gallery/1.jpg"alt="Another alt text">
             </a>
           </div>
           <div class="col-6 thumb">
-            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/why.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/why.jpg"alt="Another alt text">
+            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/2.jpg" data-target="#image-gallery">
+              <img class="img-thumbnail" src="images/gallery/2.jpg"alt="Another alt text">
             </a>
           </div>
           <div class="col-6 thumb">
-            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/why.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/why.jpg"alt="Another alt text">
+            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/3.jpg" data-target="#image-gallery">
+              <img class="img-thumbnail" src="images/gallery/3.jpg"alt="Another alt text">
             </a>
           </div>
           <div class="col-6 thumb">
-            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/why.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/why.jpg"alt="Another alt text">
+            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/4.jpeg" data-target="#image-gallery">
+              <img class="img-thumbnail" src="images/gallery/4.jpeg"alt="Another alt text">
             </a>
           </div>
           <div class="col-6 thumb">
-            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/why.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/why.jpg"alt="Another alt text">
+            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/5.jpg" data-target="#image-gallery">
+              <img class="img-thumbnail" src="images/gallery/5.jpg"alt="Another alt text">
             </a>
           </div>
           <div class="col-6 thumb">
-            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/why.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/why.jpg"alt="Another alt text">
+            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/6.jpg" data-target="#image-gallery">
+              <img class="img-thumbnail" src="images/gallery/6.jpg"alt="Another alt text">
             </a>
           </div>
           <div class="col-6 thumb">
-            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/why.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/why.jpg"alt="Another alt text">
+            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/7.jpg" data-target="#image-gallery">
+              <img class="img-thumbnail" src="images/gallery/7.jpg"alt="Another alt text">
             </a>
           </div>
           <div class="col-6 thumb">
-            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/why.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/why.jpg"alt="Another alt text">
+            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/8.jpg" data-target="#image-gallery">
+              <img class="img-thumbnail" src="images/gallery/8.jpg"alt="Another alt text">
             </a>
           </div>
           <div class="col-6 thumb">
-            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/why.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/why.jpg"alt="Another alt text">
+            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/9.jpeg" data-target="#image-gallery">
+              <img class="img-thumbnail" src="images/gallery/9.jpeg"alt="Another alt text">
             </a>
           </div>
           <div class="col-6 thumb">
-            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/why.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/why.jpg"alt="Another alt text">
+            <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/10.jpeg" data-target="#image-gallery">
+              <img class="img-thumbnail" src="images/gallery/10.jpeg"alt="Another alt text">
             </a>
           </div>
           <div class="modal fade" id="image-gallery" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -140,10 +146,11 @@
                   <img id="image-gallery-image" class="img-responsive col-md-12" src="">
                 </div>
               </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <footer class="footer-area">
       <div class="container">
         <div class="row">
@@ -167,7 +174,7 @@
             <div class="single-footer-widget">
               <h6>KONTAKT</h6>
               <ul>
-                <li><span><i class="fas fa-phone"></i></span><a href="+48503519572">+48 503 519 572</a></li>
+                <li><span><i class="fas fa-phone"></i></span><a href="tel:+48-503-519-572">+48 503 519 572</a></li>
                 <li><span><i class="far fa-envelope"></i></span><a href="mailto:autokomplexsos@gmail.com">autokomplexsos@gmail.com</a></li>
               </ul>
             </div>
