--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 	<head>
     <meta charset="UTF-8"/>
     <title>AUTO KOMPLEX Warsztat Samochodowy</title>
-    <meta name="description" content="Potężne powierzchnie magazynowe oraz w pełni zautomatyzowana logistyka na terenie Polski i Europy z wykorzystaniem współpracujących firm kurierskich.">
-    <meta name="keywords" content="">
+    <meta name="description" content="Warsztat samochodowy we Wrocławiu (Ołtaszyn/Krzyki). Blacharstwo, lakiernictwo i mechanika pojazdowa. Likwidacja szkód komunikacyjnych OC i AC. Auto holowanie.">
+    <meta name="keywords" content="watsztat samochodowy, blacharstwo, lakiernictwo, mechanika, ołtaszyn, wrocław, holowanie, likwidacja szkody, oc i ac, wymiana oleju, rozrząd, cheack engine, naprawa pojazdów, mechanik">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <link rel="icon" type="images/png" href="images/icon.png">
@@ -15,7 +15,7 @@
   <body>
     <header class="header_area whiteMenu" id="navbar">
       <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="3lp logo"></a>
+        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="auto komplex logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="icon-bar"></span>
@@ -80,32 +80,32 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-md-4">
-            <div class="feature__text">
+            <div class="featureText">
               <div class="section-title">
-                <span>Why choose us ?</span>
-                <h2>Our feature</h2>
+                <span>Dlaczego my?</span>
+                <h2>Motoryzacja jest naszą pasją!</h2>
               </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua viverra maecenas facilisis. </p>
-              <a href="#" class="primary-btn second-bg">See Courses</a>
+              <p>Powierzając nam swój samochód masz pewność, że trafi ono w ręce specjalistów z wieloletnim doświadczeniem.
+                Którzy dokonają wszelkich starań byś mógł jak najszybciej cieszyć się sprawnym samochodem.</p>
+              <a href="contact.html" class="primary-btn second-bg">KONTAKT</a>
             </div>
           </div>
           <div class="col-lg-8 col-md-8">
             <div class="row">
               <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="feature__item">
-                  <img src="img/feature/feature-1.png" alt="">
-                  <h5>Unlimited Car Support</h5>
+                <div class="featureItem">
+                  <img src="images/feature-1.png" alt="">
+                  <h5>Likwidacja szkód komunikacyjnych</h5>
                 </div>
-                <div class="feature__item">
-                  <img src="img/feature/feature-2.png" alt="">
-                  <h5>Driving School Insures</h5>
+                <div class="featureItem">
+                  <img src="images/feature-2.png" alt="">
+                  <h5>Kompleksowe naprawy blacharsko-lakiernicze</h5>
                 </div>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="feature__item right-column">
-                  <img src="img/feature/feature-3.png" alt="">
-                  <h5>Any Time Any Location</h5>
+                <div class="featureItem right-column">
+                  <img src="images/feature-3.png" alt="">
+                  <h5>Mechanika pojazdowa</h5>
                 </div>
               </div>
             </div>
@@ -117,29 +117,29 @@
       <div class="container card-container">
         <div class="row">
           <div class="card left-card col-12">
-            <img class="card-img-top left-card-img" src="../images/why.JPG">
+            <img class="card-img-top left-card-img" src="images/insurance.jpg">
             <div class="card-body">
               <div class="wrapper">
-                <h3 class="card-title">Kompleksowa obsługa logistyczna</h3>
-                <p class="card-text">Potężne powierzchnie magazynowe oraz w pełni zautomatyzowana logistyka na terenie Polski i Europy z wykorzystaniem współpracujących firm kurierskich.</p>
+                <h3 class="card-title">Likwidacja szkód komunikacyjnych.</h3>
+                <p class="card-text">Zajmujemy się pełnym wsparciem przy likwidacji szkody z tytułu AC lub OC. Pomagamy od momentu zgłoszenia szkody, przez wycenę i naprawę oraz rozliczenie z ubezpieczycielem. Z nami uświadczysz minimum formalności.</p>
               </div>
             </div>
           </div>
           <div class="card right-card col-12">
-            <img class="card-img-top right-card-img" src="../images/why.JPG">
+            <img class="card-img-top right-card-img" src="images/polishingAudi.jpg">
             <div class="card-body right-card-body">
               <div class="wrapper">
-                <h3 class="card-title">Obsługa e-commerce</h3>
-                <p class="card-text">Cenimy Twój czas, dlatego realizujemy dostawy z naszego centrum magazynowego w trybie ekspresowym.</p>
+                <h3 class="card-title">Kompleksowe naprawy <br> blacharsko-lakiernicze.</h3>
+                <p class="card-text">Warsztat Auto Komplex oferuje pełny zakres napraw blacharsko-lakierniczych. Podejmujemy się napraw lekkich jak obtarcia/wgnioty  oraz tych cięższych jak uszkodzenia konstrukcyjne pojazdu np. po dachowaniu.</p>
               </div>
             </div>
           </div>
           <div class="card left-card col-12">
-            <img class="card-img-top left-card-img" src="../images/why.JPG">
+            <img class="card-img-top left-card-img" src="images/mechanic.jpg">
             <div class="card-body">
               <div class="wrapper">
-                <h3 class="card-title">Sortowanie i obsługa zwrotów </h3>
-                <p class="card-text">Zoptymalizowane procesy logistyczne, zaawansowane i zróżnicowane wyposażenie gwarantują realizację usług sortowania na najwyższym poziomie.</p>
+                <h3 class="card-title">Mechanika pojazdowa.</h3>
+                <p class="card-text">Czy Państwo chcą zrobić podstawowy przegląd przed wyjazdem, bądź może wymienić części eksploatacyjne (oleje/filtry/hamulce) lub pojawiły się kontrolki i coś niedobrego dzieje się z samochodem? Na wszystko zaradzimy u nas w Auto Komplex!</p>
               </div>
             </div>
           </div>
@@ -169,7 +169,7 @@
             <div class="single-footer-widget">
               <h6>KONTAKT</h6>
               <ul>
-                <li><span><i class="fas fa-phone"></i></span><a href="+48503519572">+48 503 519 572</a></li>
+                <li><span><i class="fas fa-phone"></i></span><a href="tel:+48-503-519-572">+48 503 519 572</a></li>
                 <li><span><i class="far fa-envelope"></i></span><a href="mailto:autokomplexsos@gmail.com">autokomplexsos@gmail.com</a></li>
               </ul>
             </div>
