--- a/src/contact.html
+++ b/src/contact.html
@@ -18,9 +18,7 @@
         <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="auto komplex logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+          <span><i class="fas fa-bars fa-1x"></i></span>
         </button>
         <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
           <ul class="nav navbar-nav">
@@ -65,13 +63,13 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide justify-content-end" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/1.jpg" class="d-block h-100" alt="...">
+            <img src="images/1.jpg" class="d-block h-100" alt="mercedes">
           </div>
           <div class="carousel-item">
-            <img src="images/2.jpg" class="d-block h-100" alt="...">
+            <img src="images/2.jpg" class="d-block h-100" alt="mustang">
           </div>
           <div class="carousel-item">
-            <img src="images/3.jpg" class="d-block h-100" alt="...">
+            <img src="images/3.jpg" class="d-block h-100" alt="chevy">
           </div>
         </div>
       </div>
