--- a/src/gallery.html
+++ b/src/gallery.html
@@ -18,9 +18,7 @@
         <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="auto komplex logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+          <span><i class="fas fa-bars fa-1x"></i></span>
         </button>
         <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
           <ul class="nav navbar-nav">
@@ -65,13 +63,13 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide justify-content-end" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/1.jpg" class="d-block h-100" alt="...">
+            <img src="images/1.jpg" class="d-block h-100" alt="mercedes">
           </div>
           <div class="carousel-item">
-            <img src="images/2.jpg" class="d-block h-100" alt="...">
+            <img src="images/2.jpg" class="d-block h-100" alt="mustang">
           </div>
           <div class="carousel-item">
-            <img src="images/3.jpg" class="d-block h-100" alt="...">
+            <img src="images/3.jpg" class="d-block h-100" alt="chevy">
           </div>
         </div>
       </div>
@@ -87,52 +85,52 @@
           </div>
           <div class="col-6 thumb">
             <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/1.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/gallery/1.jpg"alt="Another alt text">
+              <img class="img-thumbnail" src="images/gallery/1.jpg"alt="Before repair seat">
             </a>
           </div>
           <div class="col-6 thumb">
             <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/2.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/gallery/2.jpg"alt="Another alt text">
+              <img class="img-thumbnail" src="images/gallery/2.jpg"alt="After repair seat">
             </a>
           </div>
           <div class="col-6 thumb">
             <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/3.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/gallery/3.jpg"alt="Another alt text">
+              <img class="img-thumbnail" src="images/gallery/3.jpg"alt="Before repair megane">
             </a>
           </div>
           <div class="col-6 thumb">
             <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/4.jpeg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/gallery/4.jpeg"alt="Another alt text">
+              <img class="img-thumbnail" src="images/gallery/4.jpeg"alt="After repair megane">
             </a>
           </div>
           <div class="col-6 thumb">
             <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/5.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/gallery/5.jpg"alt="Another alt text">
+              <img class="img-thumbnail" src="images/gallery/5.jpg"alt="Before repair benz1">
             </a>
           </div>
           <div class="col-6 thumb">
             <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/6.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/gallery/6.jpg"alt="Another alt text">
+              <img class="img-thumbnail" src="images/gallery/6.jpg"alt="After repair benz1">
             </a>
           </div>
           <div class="col-6 thumb">
             <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/7.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/gallery/7.jpg"alt="Another alt text">
+              <img class="img-thumbnail" src="images/gallery/7.jpg"alt="Before repair benz2">
             </a>
           </div>
           <div class="col-6 thumb">
             <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/8.jpg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/gallery/8.jpg"alt="Another alt text">
+              <img class="img-thumbnail" src="images/gallery/8.jpg"alt="After repair benz2">
             </a>
           </div>
           <div class="col-6 thumb">
             <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/9.jpeg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/gallery/9.jpeg"alt="Another alt text">
+              <img class="img-thumbnail" src="images/gallery/9.jpeg"alt="Before repair yaris">
             </a>
           </div>
           <div class="col-6 thumb">
             <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="" data-image="images/gallery/10.jpeg" data-target="#image-gallery">
-              <img class="img-thumbnail" src="images/gallery/10.jpeg"alt="Another alt text">
+              <img class="img-thumbnail" src="images/gallery/10.jpeg"alt="After repair yaris">
             </a>
           </div>
           <div class="modal fade" id="image-gallery" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
