--- a/src/index.html
+++ b/src/index.html
@@ -63,13 +63,13 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide justify-content-end" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/1.jpg" class="d-block h-100" alt="...">
+            <img src="images/1.jpg" class="d-block h-100" alt="mercedes">
           </div>
           <div class="carousel-item">
-            <img src="images/2.jpg" class="d-block h-100" alt="...">
+            <img src="images/2.jpg" class="d-block h-100" alt="mustang">
           </div>
           <div class="carousel-item">
-            <img src="images/3.jpg" class="d-block h-100" alt="...">
+            <img src="images/3.jpg" class="d-block h-100" alt="chevy">
           </div>
         </div>
       </div>
