--- a/src/services.html
+++ b/src/services.html
@@ -18,9 +18,7 @@
         <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="auto komplex logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+          <span><i class="fas fa-bars fa-1x"></i></span>
         </button>
         <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
           <ul class="nav navbar-nav">
@@ -65,13 +63,13 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide justify-content-end" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/1.jpg" class="d-block h-100" alt="...">
+            <img src="images/1.jpg" class="d-block h-100" alt="mercedes">
           </div>
           <div class="carousel-item">
-            <img src="images/2.jpg" class="d-block h-100" alt="...">
+            <img src="images/2.jpg" class="d-block h-100" alt="mustang">
           </div>
           <div class="carousel-item">
-            <img src="images/3.jpg" class="d-block h-100" alt="...">
+            <img src="images/3.jpg" class="d-block h-100" alt="chevy">
           </div>
         </div>
       </div>
@@ -82,7 +80,7 @@
           <div class="col-xl-4 col-md-4">
             <div class="single_service service_bg_1">
               <div class="service_hover">
-                <img src="images/icons/1.png" alt="">
+                <img src="images/icons/1.png" alt="crash">
                 <h3>Blacharstwo</h3>
                 <div class="hover_content">
                   <div class="hover_content_inner">
@@ -96,7 +94,7 @@
           <div class="col-xl-4 col-md-4">
             <div class="single_service service_bg_2">
               <div class="service_hover">
-                <img src="images/icons/2.png" alt="">
+                <img src="images/icons/2.png" alt="painting">
                 <h3>Lakiernictwo</h3>
                 <div class="hover_content">
                   <div class="hover_content_inner">
@@ -110,7 +108,7 @@
           <div class="col-xl-4 col-md-4">
             <div class="single_service service_bg_3">
               <div class="service_hover">
-                <img src="images/icons/3.png" alt="">
+                <img src="images/icons/3.png" alt="engine">
                 <h3>Mechanika</h3>
                 <div class="hover_content">
                   <div class="hover_content_inner">
@@ -126,7 +124,7 @@
           <div class="col-xl-4 col-md-4">
             <div class="single_service service_bg_4">
               <div class="service_hover">
-                <img src="images/icons/4.png" alt="">
+                <img src="images/icons/4.png" alt="insurance">
                 <h3>Likwidacja szkód AC i OC</h3>
                 <div class="hover_content">
                   <div class="hover_content_inner">
@@ -140,7 +138,7 @@
           <div class="col-xl-4 col-md-4">
             <div class="single_service service_bg_5">
               <div class="service_hover">
-                <img src="images/icons/5.png" alt="">
+                <img src="images/icons/5.png" alt="rent car">
                 <h3>Samochody zastępcze</h3>
                 <div class="hover_content">
                   <div class="hover_content_inner">
@@ -154,7 +152,7 @@
           <div class="col-xl-4 col-md-4">
             <div class="single_service service_bg_6">
               <div class="service_hover">
-                <img src="images/icons/6.png" alt="">
+                <img src="images/icons/6.png" alt="towing car">
                 <h3>Holowanie pojazdów</h3>
                 <div class="hover_content">
                   <div class="hover_content_inner">
@@ -173,7 +171,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="service-pic">
-              <img src="images/polishingAudi.jpg" alt="">
+              <img src="images/polishingAudi.jpg" alt="polishing audi">
             </div>
           </div>
           <div class="col-lg-6">
